test(): remove file parsing error, JMS error and fix broken notification status / subscription ban test